[gd_scene load_steps=8 format=3 uid="uid://ddogy3d6wj63n"]

[ext_resource type="PackedScene" uid="uid://b6hncvxi4ffke" path="res://ui/option_scenes/settings/remapping/elements/BannerInfo.tscn" id="1"]
[ext_resource type="Theme" uid="uid://dui8cebqku8x5" path="res://interface/themes/olympic_theme.tres" id="2"]
[ext_resource type="Script" uid="uid://c28tusk1y63e6" path="res://ui/option_scenes/settings/PanelRemapping.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://4pwgtgw7c2ii" path="res://ui/option_scenes/settings/remapping/elements/RemappingScene.tscn" id="4"]
[ext_resource type="FontFile" path="res://assets/theme/DefaultOptionFont.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://b2p62dsw7bpx1" path="res://ui/option_scenes/settings/remapping/elements/RemapAction.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://cmgckx46yk5vq" path="res://ui/common_elements/ElementOption.tscn" id="7"]

[node name="PanelRemapping" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")
what_to_remap_scene = ExtResource("4")

[node name="BannerInfo" parent="." instance=ExtResource("1")]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_right = 638.0
offset_bottom = 92.0

[node name="Content" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -442.0
offset_top = -250.0
offset_right = 442.0
offset_bottom = 250.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Content"]
process_mode = 1
offset_right = 884.0
offset_bottom = 518.0

[node name="Device" parent="Content/VBoxContainer" instance=ExtResource("7")]
anchor_right = 0.0
offset_right = 884.0
element_path = "joypad_device"
label_description = "device"
elem_type = 2

[node name="Preset" parent="Content/VBoxContainer" instance=ExtResource("7")]
anchor_right = 0.0
offset_top = 54.0
offset_right = 884.0
offset_bottom = 104.0
element_path = "joypad_preset"
label_description = "preset"
elem_type = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Content/VBoxContainer"]
offset_top = 108.0
offset_right = 884.0
offset_bottom = 464.0

[node name="UIButtonsContainer" type="VBoxContainer" parent="Content/VBoxContainer/HBoxContainer"]
offset_right = 884.0
offset_bottom = 356.0
size_flags_horizontal = 3

[node name="CategoryDirections" type="Label" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer"]
offset_right = 884.0
offset_bottom = 14.0
text = "In battle/UI"

[node name="RemapAction5" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer" instance=ExtResource("6")]
offset_top = 18.0
offset_right = 884.0
offset_bottom = 68.0
custom_minimum_size = Vector2(0, 50)
label_text = "fire/accept"
action = "fire"

[node name="RemapAction" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer" instance=ExtResource("6")]
offset_top = 72.0
offset_right = 884.0
offset_bottom = 122.0
custom_minimum_size = Vector2(0, 50)
label_text = "up"

[node name="RemapAction2" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer" instance=ExtResource("6")]
offset_top = 126.0
offset_right = 884.0
offset_bottom = 176.0
custom_minimum_size = Vector2(0, 50)
label_text = "down"
action = "down"

[node name="RemapAction3" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer" instance=ExtResource("6")]
offset_top = 180.0
offset_right = 884.0
offset_bottom = 230.0
custom_minimum_size = Vector2(0, 50)
label_text = "left"
action = "left"

[node name="RemapAction4" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer" instance=ExtResource("6")]
offset_top = 234.0
offset_right = 884.0
offset_bottom = 284.0
custom_minimum_size = Vector2(0, 50)
label_text = "right"
action = "right"

[node name="CategoryDirections2" type="Label" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer"]
offset_top = 288.0
offset_right = 884.0
offset_bottom = 302.0
text = "UI"

[node name="RemapAction6" parent="Content/VBoxContainer/HBoxContainer/UIButtonsContainer" instance=ExtResource("6")]
offset_top = 306.0
offset_right = 884.0
offset_bottom = 356.0
custom_minimum_size = Vector2(0, 50)
label_text = "cancel"
action = "cancel"
device = "ui"

[node name="Default" type="Button" parent="Content/VBoxContainer"]
offset_top = 468.0
offset_right = 884.0
offset_bottom = 518.0
custom_minimum_size = Vector2(0, 50)
theme = ExtResource("2")
theme_override_fonts/font = ExtResource("5")
text = "DEFAULT"

[node name="Back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.08618
anchor_right = 0.5
anchor_bottom = 1.08618
offset_left = -129.5
offset_top = -128.0
offset_right = 110.5
offset_bottom = -70.0
text = "BACK"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 99

[connection signal="value_changed" from="Content/VBoxContainer/Device" to="." method="_on_Device_value_changed"]
[connection signal="value_changed" from="Content/VBoxContainer/Preset" to="." method="_on_Preset_value_changed"]
[connection signal="pressed" from="Content/VBoxContainer/Default" to="." method="_on_Default_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
